# esphome_emulator

./: Makefile  README.md  esphome_emulator.service  example.py  pyproject.toml  requirements.txt
esphome_emulator/: api_options_pb2.py  api_options_pb2.pyi  api_pb2.py  api_pb2.pyi  deadbeef.py  entities.py  esphome_emulator.py  sensors.py
src/esphome_emulator/: __init__.py  api_pb2.py  api_pb2.pyi  entities.py  esphome_emulator.py  sensors.py
