[tool.poetry]
name = "esphome-emulator"
version = "0.1.0"
description = ""
authors = ["Aaron Gorka <aarongorka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sh = "^2.2.2"
noiseprotocol = "^0.3.1"
protobuf = "^6.30.2"
zeroconf = "^0.146.5"
dbus-python = "^1.4.0"
typer = "^0.15.2"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
esphome_emulator = "esphome_emulator.esphome_emulator:app"
