[project]
name = "esphome-emulator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
"sh~=2.2.2",
"noiseprotocol~=0.3.1",
"protobuf~=6.30.2",
"zeroconf~=0.146.5",
"dbus-python~=1.4.0",
"typer~=0.15.2",
"rich~=14.0.0",
"psutil~=7.1.0",
]

[tool.poetry.scripts]
[project.scripts]
esphome_emulator = "esphome_emulator.esphome_emulator:app"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.1.0"]
